# ME700-ASSIGNMENT2

./: README.md  assignment2_genAIuse.txt  pyproject.toml
.github/workflows/: test.yml
src/: matrixStructAnalysis.py
tests/: test_matrixStructAnalysis.py
tutorials/: inClassEx.py  tut_MSA.ipynb
